--- a/style.css
+++ b/style.css
@@ -276,7 +276,8 @@ span.legend-icon {
 .ladder {
   width: 180px;
   margin-top: 0 !important;
-  overflow: hidden;
+  max-height: 350px;
+  overflow-y: auto;
 }
 
 .ladder h6.minimize ~ div,
@@ -287,3 +288,5 @@ span.legend-icon {
 .ladder form, .ladder div {
   display: block;
 }
+
+
